--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
     <groupId>com.shorvat</groupId>
     <artifactId>receipe</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>receipe</name>
-    <description>Receipe application</description>
+    <name>recipe</name>
+    <description>Recipe application</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -42,6 +42,8 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
+
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -51,6 +53,12 @@
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
             <version>2.3.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.6</version>
         </dependency>
     </dependencies>
 
